--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "draft-js-import-markdown",
-  "version": "0.2.1",
+  "version": "0.2.1-gb.0",
   "description": "DraftJS: Import Markdown to ContentState",
   "main": "lib/main.js",
   "scripts": {
@@ -12,8 +12,10 @@
     "test-src": "mocha \"src/**/__tests__/*.js\""
   },
   "dependencies": {
+    "draft-js": "^0.9.1",
     "draft-js-import-element": "^0.4.0",
-    "synthetic-dom": "^0.2.0"
+    "marked": "greybyte/marked",
+    "synthetic-dom": "^0.2.1"
   },
   "peerDependencies": {
     "draft-js": ">=0.5.0",
@@ -27,7 +29,6 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
-    "draft-js-import-element": "^0.3.2",
     "eslint": "^3.8.0",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-flow-vars": "^0.5.0",
